# mali-vulkan-icd-wrapper

./: .gitignore  CMakeLists.txt  README.md
docs/: xwayland-dmabuf-bridge.md
patches/kernel/: 0001-mali-add-bifrost-low32-alias-mapping-support.patch  0001-mali-add-valhall-low32-alias-mapping-support.patch  0002-mali-add-bifrost-low32-alias-mapping-support.patch
patches/xwayland/: 0001-xwayland-dmabuf-bridge-poc.patch  0002-xwayland-dmabuf-bridge-feedback-sync.patch  0003-xwayland-dmabuf-bridge-frame-callback-paced-feedback.patch  0004-xwayland-dmabuf-bridge-feedback-on-frame-callback.patch  0005-xserver-meson-dri-fallback-to-xf86driproto.patch  0006-xwayland-dmabuf-bridge-glamor-guard.patch
scripts/kernel/: build_patched_linux_rockchip.sh
scripts/mali/: install_mali_blobs.sh
scripts/wrapper/: build_wrapper.sh
scripts/xwayland/: build_patched_xwayland.sh
src/core/: mali_wrapper_icd.cpp
src/utils/: logging.cpp  logging.hpp
src/wsi/: external_memory.cpp  swapchain_api.cpp  swapchain_base.cpp  swapchain_base.hpp  wsi_private_data.cpp  wsi_private_data.hpp
src/wsi/layer_utils/: timed_semaphore.cpp
src/wsi/wayland/: surface.cpp  surface.hpp  swapchain.cpp
src/wsi/x11/: event_bridge.cpp  event_bridge.hpp  sdl_wayland_swapchain_wrapper.cpp  sdl_wayland_swapchain_wrapper.hpp  shm_presenter.cpp  shm_presenter.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  xwayland_dmabuf_bridge.cpp  xwayland_dmabuf_bridge.hpp
